--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "evernote"]
 	path = evernote
-	url = git://github.com/evernote/evernote-sdk-python/
+	url = https://github.com/evernote/evernote-sdk-python/
